fix body-overflow for menus

--- a/freevle/tmp-design/static/css/base.scss
+++ b/freevle/tmp-design/static/css/base.scss
@@ -48,6 +48,7 @@ body {
   padding: 63px 0 0;
   font-family: $bodyfont;
   background: #f5f5f5;
+  overflow-x: hidden;
 }
 
 ::selection {
